# selenium-docker-lambda

./: .gitignore  .style.yapf  Makefile  README.md  dev.yaml  docker-compose.yaml
docker/: Dockerfile  apt-packages
docker/src/: requirements-test.txt  requirements.txt  setup.py
docker/src/moonbat/: __init__.py  cli.py  driver.py  eforms.py  page.py
nfatools/: Dockerfile
nfatools/home/: .profile  .vimrc  Makefile  README.md  setup.cfg
nfatools/home/data/download/: README.md
nfatools/home/log/: README.md
nfatools/home/nfatools/: __init__.py
nfatools/home/nfatools/form3/: cli.py  db.py  eforms.py  exceptions.py  job.py  server.py  web.py
nfatools/home/src/: .bash_history  setup.cfg
nfatools/home/src/nfatools/: __init__.py
nfatools/home/src/nfatools/form3/: __init__.py  cli.py  eforms.py  exceptions.py  form3.conf  job.py  log.py  web.py
nfatools/home/tests/: test_run.py
nfatools/nfatools/: setup.cfg
nfatools/nfatools/form3/: __init__.py  cli.py  driver.py  eforms.py  exceptions.py  server.py
nfatools/scripts/: dump_schema  entrypoint.sh  set_mysql_config  setup-modules
policy/: policy.json
