[metadata]
name = form3
version = attr: src.__version__
description =  NFATOOLS Form3 EForms Processor
long_description = file: README.md
license = MIT License

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False    
include_package_data = True
install_requires =
  arrow
  click
  flask
  selenium==4.0.0.a7
  mysql-connector
  bs4

[options.extras_require]  
  pytest
  pytest-click
  pytest-datadir

[options.package_data]
* = *.sql

[options.data_files]
/etc/nfatools = 
    form3/form3.conf

[options.entry_points]
console_scripts = 
  nfatools = nfatools.cli:cli

[tool.pytest.ini_options]
  addopts = "-svvx"
