[metadata]
name = nfatools
version = attr: nfatools.__version__
description =  NFATOOLS Form3 EForms Processor
long_description = file: README.md
license = MIT

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False    
include_package_data = True
# start-modules
install_requires =
  arrow
  click
  dotmap
  flask
  selenium==4.0.0.a7
  mysql-connector
  bs4

[options.extras_require]
test =  
  pytest
  pytest-click
  pytest-datadir

# end-modules

[options.package_data]
* =
  *.sql
  VERSION
  LICENSE

[options.data_files]
/etc/nfatools = 
    nfatools/form3/form3.conf

[options.entry_points]
console_scripts = 
  form3 = nfatools.cli:cli

[tool.pytest.ini_options]
  addopts = "-svvx"
